--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://negomi.github.io/react-tic-tac-toe/",
+  "homepage": "http://dubu.github.io/my-web",
   "dependencies": {
     "gh-pages": "^1.0.0",
     "react": "^16.0.0",
